* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
- Drop Hiera 4 support

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Mon Dec 12 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
- Migrated material from simplib
- First cut