@@ -7,7 +7,7 @@
 #  release    pup   ruby      eol
 # PE 2017.2   4.10  2.1.9  2018-02-21
 # PE 2017.3   5.3   2.4.1  2018-07
-# PE 2018.1   ???   ?????  ????-??  (LTS)
+# PE 2018.1   5.5   2.4.4  ????-??  (LTS)
 ---
 .cache_bundler: &cache_bundler
   cache:
@@ -52,6 +52,13 @@ stages:
   - acceptance
   - deploy
 
+# To avoid running a prohibitive number of tests every commit,
+# don't set this env var in your gitlab instance
+.only_with_SIMP_FULL_MATRIX: &only_with_SIMP_FULL_MATRIX
+  only:
+    variables:
+      - $SIMP_FULL_MATRIX
+
 # Puppet 4.10 for PE 2017.2 support (EOL:2018-02-21)
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
 # --------------------------------------
@@ -76,7 +83,6 @@ pup4_10-unit:
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *spec_tests
-
 
 # Puppet 5.3 for PE 2017.3 support (EOL: 2018-07)
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
@@ -103,6 +109,29 @@ pup5_3-unit:
   <<: *setup_bundler_env
   <<: *spec_tests
 
+# Puppet 5.5 for PE 2018.1 support (EOL: 2018-07)
+# See: https://puppet.com/misc/puppet-enterprise-lifecycle
+# --------------------------------------
+pup5_5-validation:
+  stage: validation
+  tags:
+    - docker
+  image: ruby:2.4
+  variables:
+    PUPPET_VERSION: '~> 5.5.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *validation_checks
+pup5_5-unit:
+  stage: unit
+  tags:
+    - docker
+  image: ruby:2.4
+  variables:
+    PUPPET_VERSION: '~> 5.5.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *spec_tests
 
 # Keep an eye on the latest puppet 5
 # ----------------------------------
@@ -127,8 +156,6 @@ pup5_latest-unit:
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *spec_tests
-
-
 
 # Acceptance tests
 # ==============================================================================
