@@ -1,3 +1,6 @@
+* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 0.0.3-0
+- Added support for Puppet 5 and OEL
+
 * Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
 - Drop Hiera 4 support
 
